src/objects/Referral__c.object
<CustomObject>
    <description>Referral to SRP program, before Candidate status before conversion to Contact record. Equivalent to Lead</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AddressId</label>
        <referenceTo>Address_Information__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_at_Arrest_Calc__c</fullName>
        <description>Determine age at time of arrest</description>
        <formula>IF(!IsNull(Arrest_Date__c), IF(!IsNull(DOB__c), FLOOR((Arrest_Date__c -  DOB__c)/ 365.2425), NULL),
FLOOR((TODAY() - DOB__c) / 365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Arrest (Calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Arrest_Numeric__c</fullName>
        <label>Age at Arrest (Numeric)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Arrest__c</fullName>
        <description>Use the calculated value from DOB or the actual value entered in Age at Arrest (Numeric)</description>
        <formula>IF(Age_at_Arrest_Numeric__c &gt;1, Age_at_Arrest_Numeric__c,Age_at_Arrest_Calc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Arrest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arraignment_Date2__c</fullName>
        <label>Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arraignment_Date3__c</fullName>
        <label>Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arraignment_Date4__c</fullName>
        <label>Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arraignment_Outcome_RPT__c</fullName>
        <description>Arraignment outcome from contact if link exists, otherwise from referral. For reporting to MOCJ. Uses Arraignment_Outcome__c on referral and ContactId__r.Arraignment_Outcome__c</description>
        <formula>IF(ISBLANK(ContactId__c),TEXT( Arraignment_Outcome__c ), TEXT(ContactId__r.Arraignment_Outcome__c))</formula>
        <label>Arraignment Outcome RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arraignment_Outcome__c</fullName>
        <description>SRP</description>
        <label>Arraignment Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Case resolved/disposed at arraignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released into Supervised Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bail set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remanded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrest_Date2__c</fullName>
        <label>Arrest Date (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrest_Date3__c</fullName>
        <label>Arrest Date (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrest_Date4__c</fullName>
        <label>Arrest Date (4)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrest_Number2__c</fullName>
        <label>Arrest #2</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrest_Number3__c</fullName>
        <label>Arrest #3</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrest_Number4__c</fullName>
        <label>Arrest #4</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Affiliation__c</fullName>
        <formula>IF (ISPICKVAL(ContactId__r.Intake_Case__r.Affiliation__c, &quot;Legal Aid&quot;), &quot;LAS&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Bronx Defenders&quot;), &quot;BXD&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Brooklyn Defenders&quot;), &quot;BDS&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;New York County Defenders&quot;), &quot;NYD&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Neighborhood Defenders of Harlem&quot;), &quot;NDS&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Queens Law Associates&quot;), &quot;QLA&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;18-b&quot;), &quot;18B&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Private&quot;), &quot;PVT&quot;,
IF (ISPICKVAL (ContactId__r.Intake_Case__r.Affiliation__c, &quot;Not Entered&quot;), &quot;&quot;,
TEXT(ContactId__r.Intake_Case__r.Affiliation__c))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attorney Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Consent_Date__c</fullName>
        <formula>IF(TEXT(Attorney_Consent__c) = &apos;Yes&apos;, (IF(TEXT(ReferredBy__c) = &apos;DC&apos;, Referral_Date__c, Screening_Date__c)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attorney Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attorney_Consent__c</fullName>
        <label>Attorney Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attorney_lu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned Attorney</description>
        <label>Attorney</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>Attorney</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Attorney)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bail_Amount__c</fullName>
        <label>Bail Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookCaseNumber__c</fullName>
        <label>Book &amp; Case #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CJA_Recommendation__c</fullName>
        <description>Recommendation based on CJA Score (-12 to +12)</description>
        <formula>IF(isblank(CJA_Score__c),&quot;No Recommendation&quot;, IF(CJA_Score__c&gt;=7,&quot;ROR&quot;, IF(CJA_Score__c&gt;=3,&quot;Moderate Risk for ROR&quot;, IF(and(CJA_Score__c&gt;=-12,CJA_Score__c&lt;=2),&quot;Not Recommended for ROR&quot;,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CJA Recommendation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CJA_Score__c</fullName>
        <label>CJA Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_A1__c</fullName>
        <label>Charge A1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_A2__c</fullName>
        <label>Charge A2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_A3__c</fullName>
        <label>Charge A3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_B1__c</fullName>
        <label>Charge B1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_B2__c</fullName>
        <label>Charge B2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_B3__c</fullName>
        <label>Charge B3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_C1__c</fullName>
        <label>Charge C1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_C2__c</fullName>
        <label>Charge C2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_C3__c</fullName>
        <label>Charge C3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_D1__c</fullName>
        <label>Charge D1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_D2__c</fullName>
        <label>Charge D2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_D3__c</fullName>
        <label>Charge D3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Excludes_SRP__c</fullName>
        <formula>if(Top_Arraignment_Charge_CC_lu__r.SRP_Exclusion__c=TRUE,&quot;Yes&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Excludes SRP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Information_Court_Docs__c</fullName>
        <formula>Case(TEXT(Top_arraignment_charge_Court_Docs__r.Level__c),
&quot;M&quot;,&quot;Misdemeanor&quot;,
&quot;F&quot;,&quot;Felony&quot;,
&quot;V&quot;,&quot;Violation&quot;,
&quot;Unknown&quot;)
&amp; &quot; Class &quot;&amp; Text(Top_arraignment_charge_Court_Docs__r.Class__c) &amp; If(Top_arraignment_charge_Court_Docs__r.Violent__c=TRUE, &quot; VIOLENT&quot;, &quot; Non-Violent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Information (Court Docs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Information__c</fullName>
        <description>show Level, class and if violent</description>
        <formula>Case(TEXT(Top_Arraignment_Charge_CC_lu__r.Level__c),
&quot;M&quot;,&quot;Misdemeanor&quot;,
&quot;F&quot;,&quot;Felony&quot;,
&quot;V&quot;,&quot;Violation&quot;,
&quot;Unknown&quot;)
&amp; &quot; Class &quot;&amp; Text(Top_Arraignment_Charge_CC_lu__r.Class__c) &amp;  If(Top_Arraignment_Charge_CC_lu__r.Violent__c=TRUE, &quot; VIOLENT&quot;, &quot; Non-Violent&quot;)</formula>
        <label>Charge Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Consent_to_Screening__c</fullName>
        <label>Client Consent to Screening</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_1__c</fullName>
        <label>Complaint (1)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_2__c</fullName>
        <label>Complaint (2)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_3__c</fullName>
        <label>Complaint (3)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacted_Officer__c</fullName>
        <label>Contacted Officer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convictions_Violence__c</fullName>
        <description>prior convictions for violence date &amp; pl code</description>
        <label>Convictions - Violence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Convictions_in_past_12_months__c</fullName>
        <label># Convictions in past 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Court_Borough__c</fullName>
        <label>Court Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Manhattan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Court_Date_Id__c</fullName>
        <label>Court Date Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Part__c</fullName>
        <description>Local picklist</description>
        <label>Part</label>
        <picklist>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 21 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 22 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 23 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 31 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 32 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 41 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 42 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 43 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 44 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 48 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 51 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 52 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 55 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 56 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 59 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 61 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 62 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 66 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 71 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 72 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 73 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName> 77 </fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Court_Part_global__c</fullName>
        <globalPicklist>Court_Parts</globalPicklist>
        <label>Court Part</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Court_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Screened in court by this person</description>
        <label>Court Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court__c</fullName>
        <label>Court</label>
        <picklist>
            <picklistValues>
                <fullName>Criminal Court</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Supreme Court</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Parole_Probation__c</fullName>
        <label>Current Parole/Probation</label>
        <picklist>
            <picklistValues>
                <fullName>None Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parole</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Prior_Conviction_Violence__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docket2__c</fullName>
        <label>Docket #2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket3__c</fullName>
        <label>Docket #3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket4__c</fullName>
        <label>Docket #4</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Violence_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine SRP eligibility</description>
        <label>Domestic Violence Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTA_Warrants_Num__c</fullName>
        <label># FTA/Warrants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <label>Firstname</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indictment__c</fullName>
        <inlineHelpText>Two format:s are permitted  
  12345-2006   and  
  SCI12345-YYYY   where YYYY is the year</inlineHelpText>
        <label>Indictment #</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ineligible_Reason__c</fullName>
        <description>Prescreening  ineligible reason</description>
        <label>Ineligible Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ineligible__c</fullName>
        <description>Eligible/Ineligible formula for SRP. Works as a formula as long as just one program.</description>
        <formula>IF( and(Age_at_Arrest_Calc__c&gt;0,Age_at_Arrest_Calc__c&lt;16),&quot;Age Ineligible&quot;,
 IF(or(  Text(Top_Arraignment_Charge_CC_lu__r.Level__c) =&quot;V&quot; , Top_Arraignment_Charge_CC_lu__r.SRP_Exclusion__c =TRUE),&quot;Charge Ineligible&quot;,
  IF( Domestic_Violence_Charges__c =TRUE,&quot;Ineligible - Domestic Violence&quot;,
    IF( left(MOCJ_Risk_Category__c,4) = &quot;High&quot;,&quot;Ineligible - MOCJ High&quot;, 
      IF(len( Ineligible_Reason__c )&gt;0,&quot;Ineligible - Other&quot;,
        IF(Len(Text(Referral_is_Ineligible__c))&gt;0,Text(Referral_is_Ineligible__c),
          IF( NOT(ISPICKVAL( ContactId__r.Screening_Outcome_srp__c , &quot;Eligible&quot;)),Text( ContactId__r.Screening_Outcome_srp__c  ),
&quot;&quot;)))))))</formula>
        <label>Ineligible?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Judge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Judge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Judge)</relationshipLabel>
        <relationshipName>Referrals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOCJ_Risk_Category__c</fullName>
        <description>Based on workflow from RA Total Score Calc. Compiled formula was too big. Returns &quot;INCOMPLETE&quot; if the RA Total Score is greater than 80. Each formula field (RA_...__c) that is used to score the results is set to 99 if info missing or incomplete.</description>
        <label>MOCJ Risk Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOCJ_Supervision_Part1__c</fullName>
        <description>First Letter is level (Felony, MIsd., Violation) and second letter is Aggravating Factors (True, False)</description>
        <formula>Left(Charge_Information__c,1)&amp;&quot;F&quot;</formula>
        <label>MOCJ Supervision Part1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOCJ_Supervision_Schedule__c</fullName>
        <description>Map MOCJ supervision level recommendation to program supervision contact requirements</description>
        <formula>CASE( Supervision_Level_Recommendation__c,
&quot;Level 1&quot;,&quot;One F2F contact per month - planning call before court date&quot;,
&quot;Level 2&quot;,&quot;One F2F contact and two phone calls per month&quot;,
&quot;Level 3&quot;,&quot;Two F2F contacts and two phone calls per month&quot;,
&quot;Level 4&quot;,&quot;One F2F contact and one phone call per WEEK&quot;,
&quot;&quot;)</formula>
        <label>MOCJ Supervision Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matrix_Supervision_Recommendation__c</fullName>
        <label>Matrix Supervision Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaxExpDate_Parole_Probation__c</fullName>
        <label>Max. Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NYSID__c</fullName>
        <label>NYSID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Court_Date__c</fullName>
        <label>Next Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <label>Notes (1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Notes (2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <label>Notes (3)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Officer_Name_Phone__c</fullName>
        <label>Officer Name &amp; Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Arraignment_Charges__c</fullName>
        <description>Additional charges to cc top arraignment charge</description>
        <label>Other Arraignment Charges</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parole_Probation_Officer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parole/Probation Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Probation Officer,Parole Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Parole/Probation Officer)</relationshipLabel>
        <relationshipName>Referrals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Arraignment_Referral__c</fullName>
        <formula>IF(AND(LEFT(TEXT(Court_Part_global__c),2) != &apos;AR&apos;,TEXT(Court_Part_global__c) != &apos;&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-Arraignment  Referral</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Arrests_Felony__c</fullName>
        <label>Prior Arrests - Felony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Arrests_Misdemeanor__c</fullName>
        <label>Prior Arrests - Misdemeanor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Arrests_Total__c</fullName>
        <formula>Prior_Arrests_Misdemeanor__c +  Prior_Arrests_Felony__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Arrests - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Conv_Violence_Pl_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Penal Code</label>
        <referenceTo>Penal_Code__c</referenceTo>
        <relationshipLabel>Referrals (Penal Code)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Conviction_Violence__c</fullName>
        <label>Prior Conviction - Violence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Convictions_Felony__c</fullName>
        <label>Prior Convictions - Felony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Convictions_Misdemeanor__c</fullName>
        <label>Prior Convictions - Misdemeanor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Convictions_Total__c</fullName>
        <formula>Prior_Convictions_Misdemeanor__c +  Prior_Convictions_Felony__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Convictions - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>SRP</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_Age_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>If( Age_at_Arrest__c &gt;=40,-4,if(Age_at_Arrest__c &gt;=30,-3,If(Age_at_Arrest__c &gt;=20,1,IF(Age_at_Arrest__c &gt;=16,6,99))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Age Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Aggravating_Explain__c</fullName>
        <label>Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Aggravating_Factors__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>Aggravating Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_CJA_Fulltime_Activity__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>CJA Fulltime Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_Drug_Conviction_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT( RA_Drug_last_9yrs__c),
&apos;Yes&apos;, 2,
&apos;No&apos;, -2,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Drug Conviction Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Drug_last_9yrs__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>Drug Conviction in Last 9 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_Felony_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT(RA_Felony_last_9yrs__c ),
&apos;Yes&apos;,1,
&apos;No&apos;, -1,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Felony Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Felony_last_9yrs__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>Felony Conviction in Last 9 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RA_First_Arrest_Calc__c</fullName>
        <description>MOCJ Risk Assessment Calculation</description>
        <formula>case(TEXT(RA_First_Arrest__c),
&apos;Yes&apos;,-3,
&apos;No&apos;, 3,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA First Arrest Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_First_Arrest__c</fullName>
        <description>MOCJ Risk Assessment</description>
        <label>First Arrest</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>